# A2A-Agent-Platform

./: .env.external.example  .env.internal.example  .gitignore  AGENT_VERIFICATION_REPORT.md  API_CONTRACTS.md  ARCHITECTURE.md  AUTHENTICATION_ANALYSIS.md  AUTHENTICATION_ARCHITECTURE.md  AUTHENTICATION_DOCUMENTATION_INDEX.md  AUTHENTICATION_QUICK_REFERENCE.md  Authentication_and_Security.md  BACKEND_IMPLEMENTATION_GUIDE.md  BLUEPRINT.md  CHATPLAYGROUND_UPDATE.md  CHECKLIST.md  CLAUDE.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CURRENT_STATUS.md  DATABASE_STRATEGY.md  DEPLOY_ANALYSIS.md  DEPLOY_ANALYSIS_README.md  DEPLOY_IMPLEMENTATION_GUIDE.md  DEPLOY_QUICK_SUMMARY.md  DEPLOY_TEST_SCENARIOS_DETAILED.md  DEVELOPMENT_GUIDE.md  DEV_ENVIRONMENT.md  Developer_Work_Guide.md  Development_Environment_Settings.md  FRONTEND_IMPROVEMENTS.md  FRONTEND_SETUP_GUIDE.md  FRONTEND_VERIFICATION_REPORT.md  GEMINI.md  GIT_SUBMODULES.md  GLOSSARY.md  HISTORY.md  HISTORY_ALL.md  IMPLEMENTATION_SUMMARY.md  INFRA_README.md  MOCK_SERVICES.md  PROJECT_INTEGRATED_GUIDE.md  (+30 more)
Reference_Documents/: A2A_Example.md  A2A_INTEGRATION_DESIGN.md  A2A_STREAMING.md  AGENT_CARD_JSON.md  AGNO_OS_ENDPOINT.md  COLOR_MANAGEMENT_GUIDE.md  HUB_TEST_SCENARIOS.md
docker-compose/: docker-compose.external.yml  docker-compose.internal.yml
e2e/: agent-form-validation.spec.ts
frontend/: .env  .env.example  .npmrc  ADVANCED_MARKDOWN_EXAMPLES.md  CHANGELOG.md  CHAT_MARKDOWN_FEATURE.md  README.md  RICH_CHAT_README.md  fix-https-urls.sh  index.html  mock-server.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/Reference_documents/: CHAT_MARKDOWN_FEATURE.md  MARKDOWN_TEST_EXAMPLES.md  PLAYGROUND_FEATURES_GUIDE.md
frontend/designs/: flow_chat.html  hub_chat.html  hub_default.html  login.html  settings_add_new_llm_model_popup.html  settings_api_key_management.html  settings_geneal_tab.html  settings_llm_model_management.html  settings_statistics.html  settings_user_management.html  workbench_cannot_deploy_localhost.html  workbench_chat_and_debug.html  workbench_choose_deploy.html  workbench_create_edit_agent.html  workbench_default.html
frontend/playwright-report/: index.html
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
jules-scratch/verification/: verify_all_features.py  verify_all_screens.py  verify_new_design.py
mock-sso/: Dockerfile  main.py  requirements.txt
mock-sso/templates/: login.html
nginx/: dev.conf
repos/: README.md  SUBMODULE_DEVELOPMENT_GUIDE.md
repos/admin-service/: Dockerfile.dev  FRONTEND_GUIDE.md  README.md  alembic.ini  pyproject.toml
repos/agent-service/: API_EXAMPLES.md  Dockerfile.dev  FRONTEND_GUIDE.md  README.md  alembic.ini  pyproject.toml
repos/api-gateway/: Dockerfile.dev  README.md  docker-entrypoint.sh  pyproject.toml  start.sh
repos/api-gateway/app/: config.py  main.py  middleware.py  websocket_proxy.py
repos/chat-service/: Dockerfile.dev  FRONTEND_GUIDE.md  README.md  alembic.ini  pyproject.toml
repos/infra/: .env  README.md  SSO_INTEGRATION_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  init-db.sql  start.sh
repos/infra-service/: FRONTEND_GUIDE.md
repos/llm-proxy-service/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
repos/llm-proxy-service/alembic/: env.py
repos/llm-proxy-service/alembic/versions/: 000_initial_schema.py  001_add_user_id_column.py
repos/llm-proxy-service/app/: main.py
repos/llm-proxy-service/app/api/: __init__.py  internal.py  openai_compatible.py  trace_openai.py
repos/llm-proxy-service/app/api/v1/: statistics.py
repos/llm-proxy-service/app/core/: database.py  redis_client.py
repos/llm-proxy-service/app/websocket/: __init__.py  manager.py
repos/shared/: Dockerfile.dev
repos/tracing-service/: Dockerfile.dev  FRONTEND_GUIDE.md  README.md  (+2 more)
repos/worker-service/: Dockerfile  Dockerfile.dev  FRONTEND_GUIDE.md  README.md  pyproject.toml
repos/worker-service/alembic/: env.py
repos/worker-service/alembic/versions/: a1b2c3d4e5f6_add_agent_health_status_table.py  c05dd567237d_initial_migration.py
repos/worker-service/app/: __init__.py  celery_app.py  main.py  tasks.py
repos/worker-service/app/api/: __init__.py  statistics.py
repos/worker-service/app/core/: database.py
scripts/: setup.sh
test_adk/: pyproject.toml
test_adk/math_agent/: agent.py
test_agents/: README.md  pyproject.toml  requirements.txt
test_agno/: README.md  pyproject.toml
test_agno/math_agent/: agent.py  agent_single.py
test_langchain/: .gitignore  README.md  main.py  pyproject.toml
(+235 files in other folders)
