[project]
name = "test-agno-agents"
version = "0.1.0"
description = "Test agents for A2A Platform using Agno framework"
requires-python = ">=3.11"
dependencies = [
    "agno==2.2.11",
    "a2a-sdk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "litellm>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["math_agent"]
